WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200356
REGRESSION: HSBC Personal Banking download/print dialog is usually positioned off screen on iPad
https://bugs.webkit.org/show_bug.cgi?id=200356
Summary
REGRESSION: HSBC Personal Banking download/print dialog is usually positioned...
Tim Horton
Reported
2019-08-01 13:04:47 PDT
REGRESSION: HSBC Personal Banking download/print dialog is usually positioned off screen on iPad
Attachments
Patch
(3.00 KB, patch)
2019-08-01 13:04 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-08-01 13:04:56 PDT
Created
attachment 375339
[details]
Patch
Tim Horton
Comment 2
2019-08-01 13:04:57 PDT
<
rdar://problem/51885199
>
WebKit Commit Bot
Comment 3
2019-08-01 13:23:48 PDT
Comment on
attachment 375339
[details]
Patch Clearing flags on attachment: 375339 Committed
r248129
: <
https://trac.webkit.org/changeset/248129
>
WebKit Commit Bot
Comment 4
2019-08-01 13:23:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug