REGRESSION: HSBC Personal Banking download/print dialog is usually positioned off screen on iPad https://bugs.webkit.org/show_bug.cgi?id=200356 <rdar://problem/51885199>

Reviewed by Beth Dakin.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::desktopClassBrowsingRecommendedForRequest):
Add HSBC domains to the list of sites that recommend mobile mode by default.


Canonical link: https://commits.webkit.org/214136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248129 268f45cc-cd09-0410-ab3c-d52691b4dbfc